@@ -1,14 +1,8 @@
 #' Join two data frames together.
 #'
-#' Unlike merge, preserves the order of x no matter what join type is used.
-#' If needed, rows from y will be added to the bottom.  
+#' Join, like merge, is designed for the types of problems
+#' where you would use a sql join. The four join types return:
 #' 
-#' Join is about four times faster than merge, but it achieves this speed
-#' by assuming unique keys:  if several rows share the same matching key, only
-#' the first one will be matched.  Join will silently drop duplicate keys.
-#'
-#' Join like merge is designed for the types of problems
-#' where you would use a sql join.  The four join types return:
 #' \itemize{
 #'  \item \code{inner}:  only rows with matching keys in both x and y
 #'  \item \code{left}:   all rows in x, adding matching columns from y
@@ -16,12 +10,23 @@
 #'  \item \code{full}:   all rows in x with matching columns in y, then the
 #'    rows of y that don't match x.
 #' }
+#'
+#' Note that from plyr 1.5, \code{join} will (by default) return all matches,
+#' not just the first match, as it did previously.
+#'
+#' Unlike merge, preserves the order of x no matter what join type is used.
+#' If needed, rows from y will be added to the bottom.  Join is often faster
+#' than merge, although it is somewhat less featureful - it currently offers
+#' no way to rename output or merge on different variables in the x and y
+#' data frames.
 #' 
 #' @param x data frame
 #' @param y data frame
 #' @param by character vector of variable names to join by
 #' @param type type of join: left (default), right, inner or full.  See 
-#'  details for more information.
+#'   details for more information.
+#' @param match how should duplicate ids be matched? Either match just the
+#'   \code{"first"} matching row, or match \code{"all"} matching rows.
 #' @keywords manip
 #' @export
 #' @examples
@@ -32,13 +37,20 @@
 #' b2 <- arrange(b2, id, year, stint)
 #' b3 <- arrange(b3, id, year, stint)
 #' stopifnot(all.equal(b2, b3))
-join <- function(x, y, by = intersect(names(x), names(y)), type = "left") {
+join <- function(x, y, by = intersect(names(x), names(y)), type = "left", match = "all") {
   type <- match.arg(type, c("left", "right", "inner", "full"))
+  match <- match.arg(match, c("first", "all"))
   
   if (missing(by)) {
     message("Joining by: ", paste(by, collapse = ", "))
   }
   
+  switch(match, 
+    "first" = join_first(x, y, by, type),
+    "all" = join_all(x, y, by, type))
+}
+
+join_first <- function(x, y, by, type) {
   keys <- join.keys(x, y, by = by)
   new.cols <- setdiff(names(y), by)
   
@@ -73,6 +85,55 @@ join <- function(x, y, by = intersect(names(x), names(y)), type = "left") {
   }
 }
 
+# Basic idea to perform a full cartesian product of the two data frames
+# and then evaluate which rows meet the merging criteria. But that is 
+# horrendously inefficient, so we do various types of hashing, implemented
+# in R as split_indices
+join_all <- function(x, y, by, type) {
+  new.cols <- setdiff(names(y), by)
+  
+  if (type == "inner") {
+    ids <- join_ids(x, y, by)
+    out <- cbind(x[ids$x, , drop = FALSE], y[ids$y, new.cols, drop = FALSE])
+  } else if (type == "left") {
+    ids <- join_ids(x, y, by, all = TRUE)
+    out <- cbind(x[ids$x, , drop = FALSE], y[ids$y, new.cols, drop = FALSE])
+  } else if (type == "right") {
+    # Flip x and y, but make sure to put new columns in the right place
+    ids <- join_ids(y, x, by, all = TRUE)
+    out <- cbind(x[ids$y, , drop = FALSE], y[ids$x, new.cols, drop = FALSE])
+  } else if (type == "full") {
+    # x's with all matching y's, then non-matching y's - just the same as
+    # join.first
+    ids <- join_ids(x, y, by, all = TRUE)
+    
+    matched <- cbind(x[ids$x, , drop = FALSE], 
+                     y[ids$y, new.cols, drop = FALSE])
+    unmatched <- y[setdiff(seq_len(nrow(y)), ids$y), , drop = FALSE]
+    out <- rbind.fill(matched, unmatched)
+  }
+  
+  unrowname(out)
+}
+
+join_ids <- function(x, y, by, all = FALSE) {
+  keys <- join.keys(x, y, by = by)
+  
+  ys <- split_indices(seq_along(keys$y), keys$y, keys$n)
+  length(ys) <- keys$n
+  
+  if (all) {
+    # replace NULL with NA to preserve those x's without matching y's
+    nulls <- vapply(ys, function(x) length(x) == 0, logical(1))
+    ys[nulls] <- list(NA)    
+  }
+  
+  ys <- ys[keys$x]
+  xs <- rep(seq_along(keys$x), vapply(ys, length, numeric(1)))
+  
+  list(x = xs, y = unlist(ys))
+}
+
 #' Join keys.
 #' Given two data frames, create a unique key for each row.  
 #'
@@ -87,6 +148,7 @@ join.keys <- function(x, y, by) {
   
   list(
     x = keys[1:nrow(x)],
-    y = keys[-(1:nrow(x))]
+    y = keys[-(1:nrow(x))],
+    n = attr(keys, "n")
   )
 }
